# Collective-Action-Backend

./: .dockerignore  .env  .gitignore  DEPLOY.md  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 1fa86ace379a_initial_migration.py  24199473cc56_add_new_columns_to_users_table.py  2bf61a569a02_make_status_name_non_unique.py  348e5369ecfc_add_location_and_social_links_columns_.py  50657c3bbdb3_add_location_social_links_and_firebase_.py  66231472e7ea_add_new_tables_for_initiatives_actions_.py  71ac2fd703e5_add_status_type_to_status_table.py  7b2ac69fdbc5_initial_migration.py  7fc93afdc7e2_updates_to_actions_schema.py  869beb159266_change_user_id_to_uuid.py
app/: config.py  database.py  main.py
app/api/: actions.py  config.py  initiatives.py  quotes.py  users.py
app/models/: __init__.py  action.py  action_types.py  category.py  initiative.py  quote.py  status.py  user.py
app/schemas/: action.py  action_types.py  category.py  initiative.py  quote.py  status.py  user.py
