[project]
name = "collective-action-backend"
version = "0.1.0"
description = "Collective Action Backend API"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "pydantic[email]>=2.6",
    "pydantic-settings>=2.0",
    "ruff>=0.14.11",
    "alembic>=1.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.25",
    "ruff>=0.1",
    "mypy>=1.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["alembic*", "tests*"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "C", "UP"]